vd updates, icon fix for bright roll, and ad create pause modal z-index issue

--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -1376,7 +1376,7 @@ multiselect .dropdown-menu > li > a {
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 1050;
+  z-index: 999999;
   -webkit-overflow-scrolling: touch;
   outline: 0;
   background: rgba(0, 0, 0, 0.8);
